codelets/ue_contexts/ue_contexts.pb.h

/* Struct definitions */
typedef struct _du_ue_ctx_creation {
    uint64_t timestamp;
    uint32_t du_ue_index;
    uint32_t tac;
    uint32_t plmn;
    uint32_t nci;
    uint32_t pci;
    uint32_t crnti;
} du_ue_ctx_creation;
typedef struct _du_ue_ctx_update_crnti {
    uint64_t timestamp;
    uint32_t du_ue_index;
    uint32_t crnti;
} du_ue_ctx_update_crnti;
typedef struct _du_ue_ctx_deletion {
    uint64_t timestamp;
    uint32_t du_ue_index;
} du_ue_ctx_deletion;
typedef struct _cucp_ue_ctx_creation {
    uint64_t timestamp;
    uint32_t cucp_ue_index;
    uint32_t plmn;
    bool has_pci;
    uint32_t pci;
    bool has_crnti;
    uint32_t crnti;
} cucp_ue_ctx_creation;
typedef struct _cucp_ue_ctx_update {
    uint64_t timestamp;
    uint32_t cucp_ue_index;
    uint32_t plmn;
    uint32_t pci;
    uint32_t crnti;
} cucp_ue_ctx_update;
typedef struct _cucp_ue_ctx_deletion {
    uint64_t timestamp;
    uint32_t cucp_ue_index;
} cucp_ue_ctx_deletion;
typedef struct _e1ap_cucp_bearer_ctx_setup {
    uint64_t timestamp;
    uint32_t cucp_ue_index;
    uint32_t cucp_ue_e1ap_id;
} e1ap_cucp_bearer_ctx_setup;
typedef struct _e1ap_cuup_bearer_ctx_setup {
    uint64_t timestamp;
    uint32_t cuup_ue_index;
    bool success;
    uint32_t cucp_ue_e1ap_id;
    uint32_t cuup_ue_e1ap_id;
} e1ap_cuup_bearer_ctx_setup;
typedef struct _e1ap_cuup_bearer_ctx_release {
    uint64_t timestamp;
    uint32_t cuup_ue_index;
    bool success;
    uint32_t cucp_ue_e1ap_id;
    uint32_t cuup_ue_e1ap_id;
} e1ap_cuup_bearer_ctx_release;
typedef struct _nssai_t {
    uint32_t sst;
    uint32_t sd;
} nssai_t;