codelets/ue_contexts/ue_contexts.py


        unix_lib_dirs_list = []
        if bitage.startswith("64"):
            # prefer 64 bit if that is our arch
            unix_lib_dirs_list += ["/lib64", "/usr/lib64"]

        # must include standard libs, since those paths are also used by 64 bit
        # installs
        unix_lib_dirs_list += ["/lib", "/usr/lib"]
        if sys.platform.startswith("linux"):
            # Try and support multiarch work in Ubuntu
            # https://wiki.ubuntu.com/MultiarchSpec
            if bitage.startswith("32"):
                # Assume Intel/AMD x86 compat
                unix_lib_dirs_list += ["/lib/i386-linux-gnu", "/usr/lib/i386-linux-gnu"]
            elif bitage.startswith("64"):
                # Assume Intel/AMD x86 compatible
                unix_lib_dirs_list += [
                    "/lib/x86_64-linux-gnu",
                    "/usr/lib/x86_64-linux-gnu",
                ]
            else:
                # guess...
                unix_lib_dirs_list += glob.glob("/lib/*linux-gnu")
        directories.extend(unix_lib_dirs_list)

        cache = {}
        lib_re = re.compile(r"lib(.*)\.s[ol]")
        # ext_re = re.compile(r"\.s[ol]$")
        for our_dir in directories.ordered():
            try:
                for path in glob.glob("%s/*.s[ol]*" % our_dir):
                    file = os.path.basename(path)

                    # Index by filename
                    cache_i = cache.setdefault(file, set())
                    cache_i.add(path)

                    # Index by library name
                    match = lib_re.match(file)
                    if match:
                        library = match.group(1)
                        cache_i = cache.setdefault(library, set())
                        cache_i.add(path)
            except OSError:
                pass

        self._ld_so_cache = cache

    def getplatformpaths(self, libname):
        if self._ld_so_cache is None:
            self._create_ld_so_cache()

        result = self._ld_so_cache.get(libname, set())
        for i in result:
            # we iterate through all found paths for library, since we may have
            # actually found multiple architectures or other library types that
            # may not load
            yield i


# Windows


class WindowsLibraryLoader(LibraryLoader):
    """Library loader for Microsoft Windows"""

    name_formats = ["%s.dll", "lib%s.dll", "%slib.dll", "%s"]

    class Lookup(LibraryLoader.Lookup):
        """Lookup class for Windows libraries..."""

        def __init__(self, path):
            super(WindowsLibraryLoader.Lookup, self).__init__(path)
            self.access["stdcall"] = ctypes.windll.LoadLibrary(path)


# Platform switching

# If your value of sys.platform does not appear in this dict, please contact
# the Ctypesgen maintainers.

loaderclass = {
    "darwin": DarwinLibraryLoader,
    "cygwin": WindowsLibraryLoader,
    "win32": WindowsLibraryLoader,
    "msys": WindowsLibraryLoader,
}

load_library = loaderclass.get(sys.platform, PosixLibraryLoader)()


def add_library_search_dirs(other_dirs):
    """
    Add libraries to search paths.
    If library paths are relative, convert them to absolute with respect to this
    file's directory
    """
    for path in other_dirs:
        if not os.path.isabs(path):
            path = os.path.abspath(path)
        load_library.other_dirs.append(path)


del loaderclass

# End loader

add_library_search_dirs([])

# No libraries

# No modules

__uint8_t = c_ubyte# /usr/include/x86_64-linux-gnu/bits/types.h: 38

__uint16_t = c_ushort# /usr/include/x86_64-linux-gnu/bits/types.h: 40

__uint32_t = c_uint# /usr/include/x86_64-linux-gnu/bits/types.h: 42

__uint64_t = c_ulong# /usr/include/x86_64-linux-gnu/bits/types.h: 45

__uint_least16_t = __uint16_t# /usr/include/x86_64-linux-gnu/bits/types.h: 55

uint8_t = __uint8_t# /usr/include/x86_64-linux-gnu/bits/stdint-uintn.h: 24

uint32_t = __uint32_t# /usr/include/x86_64-linux-gnu/bits/stdint-uintn.h: 26

uint64_t = __uint64_t# /usr/include/x86_64-linux-gnu/bits/stdint-uintn.h: 27

uint_least16_t = __uint_least16_t# /usr/include/stdint.h: 50

pb_byte_t = uint8_t# /home/maxim/Desktop/jrtc-apps/jbpf_protobuf/3p/nanopb/pb.h: 241

pb_type_t = pb_byte_t# /home/maxim/Desktop/jrtc-apps/jbpf_protobuf/3p/nanopb/pb.h: 250

pb_size_t = uint_least16_t# /home/maxim/Desktop/jrtc-apps/jbpf_protobuf/3p/nanopb/pb.h: 326

# /home/maxim/Desktop/jrtc-apps/jbpf_protobuf/3p/nanopb/pb.h: 332
class struct_pb_istream_s(Structure):
    pass

pb_istream_t = struct_pb_istream_s# /home/maxim/Desktop/jrtc-apps/jbpf_protobuf/3p/nanopb/pb.h: 332

# /home/maxim/Desktop/jrtc-apps/jbpf_protobuf/3p/nanopb/pb.h: 333
class struct_pb_ostream_s(Structure):
    pass

pb_ostream_t = struct_pb_ostream_s# /home/maxim/Desktop/jrtc-apps/jbpf_protobuf/3p/nanopb/pb.h: 333

# /home/maxim/Desktop/jrtc-apps/jbpf_protobuf/3p/nanopb/pb.h: 353
class struct_pb_field_iter_s(Structure):
    pass

pb_field_iter_t = struct_pb_field_iter_s# /home/maxim/Desktop/jrtc-apps/jbpf_protobuf/3p/nanopb/pb.h: 334

# /home/maxim/Desktop/jrtc-apps/jbpf_protobuf/3p/nanopb/pb.h: 340
class struct_pb_msgdesc_s(Structure):
    pass

pb_msgdesc_t = struct_pb_msgdesc_s# /home/maxim/Desktop/jrtc-apps/jbpf_protobuf/3p/nanopb/pb.h: 339

struct_pb_msgdesc_s.__slots__ = [
    'field_info',
    'submsg_info',
    'default_value',
    'field_callback',
    'field_count',
    'required_field_count',
    'largest_tag',
]
struct_pb_msgdesc_s._fields_ = [
    ('field_info', POINTER(uint32_t)),
    ('submsg_info', POINTER(POINTER(pb_msgdesc_t))),
    ('default_value', POINTER(pb_byte_t)),
    ('field_callback', CFUNCTYPE(UNCHECKED(c_bool), POINTER(pb_istream_t), POINTER(pb_ostream_t), POINTER(pb_field_iter_t))),
    ('field_count', pb_size_t),
    ('required_field_count', pb_size_t),
    ('largest_tag', pb_size_t),
]

struct_pb_field_iter_s.__slots__ = [
    'descriptor',
    'message',
    'index',
    'field_info_index',
    'required_field_index',
    'submessage_index',
    'tag',
    'data_size',
    'array_size',
    'type',
    'pField',
    'pData',
    'pSize',
    'submsg_desc',
]
struct_pb_field_iter_s._fields_ = [
    ('descriptor', POINTER(pb_msgdesc_t)),
    ('message', POINTER(None)),
    ('index', pb_size_t),
    ('field_info_index', pb_size_t),
    ('required_field_index', pb_size_t),
    ('submessage_index', pb_size_t),
    ('tag', pb_size_t),
    ('data_size', pb_size_t),
    ('array_size', pb_size_t),
    ('type', pb_type_t),
    ('pField', POINTER(None)),
    ('pData', POINTER(None)),
    ('pSize', POINTER(None)),
    ('submsg_desc', POINTER(pb_msgdesc_t)),
]

# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 21
class struct__du_ue_ctx_creation(Structure):
    pass

struct__du_ue_ctx_creation.__slots__ = [
    'timestamp',
    'du_ue_index',
    'tac',
    'plmn',
    'nci',
    'pci',
    'crnti',
]
struct__du_ue_ctx_creation._fields_ = [
    ('timestamp', uint64_t),
    ('du_ue_index', uint32_t),
    ('tac', uint32_t),
    ('plmn', uint32_t),
    ('nci', uint32_t),
    ('pci', uint32_t),
    ('crnti', uint32_t),
]

du_ue_ctx_creation = struct__du_ue_ctx_creation# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 21

# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 27
class struct__du_ue_ctx_update_crnti(Structure):
    pass

struct__du_ue_ctx_update_crnti.__slots__ = [
    'timestamp',
    'du_ue_index',
    'crnti',
]
struct__du_ue_ctx_update_crnti._fields_ = [
    ('timestamp', uint64_t),
    ('du_ue_index', uint32_t),
    ('crnti', uint32_t),
]

du_ue_ctx_update_crnti = struct__du_ue_ctx_update_crnti# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 27

# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 32
class struct__du_ue_ctx_deletion(Structure):
    pass

struct__du_ue_ctx_deletion.__slots__ = [
    'timestamp',
    'du_ue_index',
]
struct__du_ue_ctx_deletion._fields_ = [
    ('timestamp', uint64_t),
    ('du_ue_index', uint32_t),
]

du_ue_ctx_deletion = struct__du_ue_ctx_deletion# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 32

# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 42
class struct__cucp_ue_ctx_creation(Structure):
    pass

struct__cucp_ue_ctx_creation.__slots__ = [
    'timestamp',
    'cucp_ue_index',
    'plmn',
    'has_pci',
    'pci',
    'has_crnti',
    'crnti',
]
struct__cucp_ue_ctx_creation._fields_ = [
    ('timestamp', uint64_t),
    ('cucp_ue_index', uint32_t),
    ('plmn', uint32_t),
    ('has_pci', c_bool),
    ('pci', uint32_t),
    ('has_crnti', c_bool),
    ('crnti', uint32_t),
]

cucp_ue_ctx_creation = struct__cucp_ue_ctx_creation# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 42

# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 50
class struct__cucp_ue_ctx_update(Structure):
    pass

struct__cucp_ue_ctx_update.__slots__ = [
    'timestamp',
    'cucp_ue_index',
    'plmn',
    'pci',
    'crnti',
]
struct__cucp_ue_ctx_update._fields_ = [
    ('timestamp', uint64_t),
    ('cucp_ue_index', uint32_t),
    ('plmn', uint32_t),
    ('pci', uint32_t),
    ('crnti', uint32_t),
]

cucp_ue_ctx_update = struct__cucp_ue_ctx_update# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 50

# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 55
class struct__cucp_ue_ctx_deletion(Structure):
    pass

struct__cucp_ue_ctx_deletion.__slots__ = [
    'timestamp',
    'cucp_ue_index',
]
struct__cucp_ue_ctx_deletion._fields_ = [
    ('timestamp', uint64_t),
    ('cucp_ue_index', uint32_t),
]

cucp_ue_ctx_deletion = struct__cucp_ue_ctx_deletion# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 55

# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 61
class struct__e1ap_cucp_bearer_ctx_setup(Structure):
    pass

struct__e1ap_cucp_bearer_ctx_setup.__slots__ = [
    'timestamp',
    'cucp_ue_index',
    'cucp_ue_e1ap_id',
]
struct__e1ap_cucp_bearer_ctx_setup._fields_ = [
    ('timestamp', uint64_t),
    ('cucp_ue_index', uint32_t),
    ('cucp_ue_e1ap_id', uint32_t),
]

e1ap_cucp_bearer_ctx_setup = struct__e1ap_cucp_bearer_ctx_setup# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 61

# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 69
class struct__e1ap_cuup_bearer_ctx_setup(Structure):
    pass

struct__e1ap_cuup_bearer_ctx_setup.__slots__ = [
    'timestamp',
    'cuup_ue_index',
    'success',
    'cucp_ue_e1ap_id',
    'cuup_ue_e1ap_id',
]
struct__e1ap_cuup_bearer_ctx_setup._fields_ = [
    ('timestamp', uint64_t),
    ('cuup_ue_index', uint32_t),
    ('success', c_bool),
    ('cucp_ue_e1ap_id', uint32_t),
    ('cuup_ue_e1ap_id', uint32_t),
]

e1ap_cuup_bearer_ctx_setup = struct__e1ap_cuup_bearer_ctx_setup# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 69

# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 77
class struct__e1ap_cuup_bearer_ctx_release(Structure):
    pass

struct__e1ap_cuup_bearer_ctx_release.__slots__ = [
    'timestamp',
    'cuup_ue_index',
    'success',
    'cucp_ue_e1ap_id',
    'cuup_ue_e1ap_id',
]
struct__e1ap_cuup_bearer_ctx_release._fields_ = [
    ('timestamp', uint64_t),
    ('cuup_ue_index', uint32_t),
    ('success', c_bool),
    ('cucp_ue_e1ap_id', uint32_t),
    ('cuup_ue_e1ap_id', uint32_t),
]

e1ap_cuup_bearer_ctx_release = struct__e1ap_cuup_bearer_ctx_release# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 77

# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 82
class struct__nssai_t(Structure):
    pass

struct__nssai_t.__slots__ = [
    'sst',
    'sd',
]
struct__nssai_t._fields_ = [
    ('sst', uint32_t),
    ('sd', uint32_t),
]

nssai_t = struct__nssai_t# /home/maxim/Desktop/jrtc-apps/codelets/ue_contexts/ue_contexts.pb.h: 82
